--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head> <!--  aqui dentro são as informações que não aprecem na página web-->
 		<meta charset="UTF-8"> <!-- adiciona acentuação e caracteres especiais-->
 		<title> Barbearia alura </title> <!-- titulo da aba do navegador-->
-		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="style_home.css">
 		
 	</head>
 	<body> <!-- aqui dentro são as informações que aparecem na pág web-->
