--- a/produtos.html
+++ b/produtos.html
@@ -5,7 +5,7 @@
         <title>Produtos - Barbearia Alura</title>
 
         <link rel="stylesheet" href="reset.css"> <!-- como resetar as cores e margens padrão a página da web-->
-        <link rel="stylesheet" href="produtos.css"> <!--criando o CSS para editar o visual-->
+        <link rel="stylesheet" href="style.css"> <!--criando o CSS para editar o visual-->
     </head>
     <body>
         <header>
